<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nice Weather</string>
    <string name="section_five_day_forecast">Forecast</string>
    <string name="feels_like">Feels like:</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_value_pascals">hPa</string>
    <string name="pressure_value_millimeters">mmHg</string>
    <string name="wind_value_meters_per_second">m/s</string>
    <string name="wind_value_kilometers_per_hour">km/h</string>
    <string name="theme_title">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="appearance_header">Appearance</string>
    <string name="unit_header">Units</string>
    <string name="temperature_title">Temperature</string>
    <string name="pressure_title">Pressure</string>
    <string name="wind_title">Wind</string>
    <string name="interval_hour">1 hour</string>
    <string name="interval_three_hours">3 hours</string>
    <string name="interval_six_hours">6 hours</string>
    <string name="interval_twelve_hours">12 hours</string>
    <string name="interval_twenty_four_hours">24 hours</string>
    <string name="interval_title">Update interval</string>
    <string name="other_header">Other</string>
    <string name="update_title">Update weather in background</string>
    <string name="title_activity_settings">Settings</string>
    <string name="theme_auto">Automatic</string>
    <string name="section_next_hours">Next 24 hours</string>
    <string name="sign_degree">°</string>
    <string name="sign_percent">%</string>
    <string name="menu_navigation_description">Menu</string>
    <string name="menu_search_description">Search</string>
    <string name="input_enter_city">Enter city…</string>
    <string name="header_favourite_locations">Favourite locations</string>
    <string name="search_hint">Enter the city name or exact address</string>
    <string name="settings_title_temperature">Temperature</string>
    <string name="settings_title_theme">Theme</string>
    <string name="settings_header_about">About</string>
    <string name="settings_title_app_version">App version</string>
    <string name="settings_title_build_number">Build Number</string>
    <string name="settings_title_author">Author</string>
    <string name="settings_summary_author">enxy0</string>
    <string name="settings_title_github">Github</string>
    <string name="settings_summary_github">https://github.com/enxy0/Weather</string>
    <string name="settings_name">Settings</string>
    <string name="settings_header_units">Units</string>
    <string name="settings_header_appearance">Appearance</string>
    <string name="settings_vk_link">https://vk.com/enxyo</string>
    <string name="settings_title_wind">Wind</string>
    <string name="settings_title_pressure">Pressure</string>
    <string name="failure_connection_error">Couldn\'t load data. Please, check your internet connection!</string>
    <string name="failure_server_error">Something went wrong… Server is not responding!</string>
    <string name="button_try_again">Try again</string>
    <string name="hint_title_no_locations">Failed to find location</string>
    <string name="hint_description_no_locations">Nothing found matching your query</string>
    <string name="hint_icon_sad">😔</string>
    <string name="hint_title_no_internet">Couldn\'t load data.</string>
    <string name="hint_description_no_internet">Please, check your internet connection and try again.</string>
    <string name="hint_icon_web">🌐</string>
    <string name="hint_title_no_favourite_locations">Couldn\'t find locations</string>
    <string name="hint_description_no_favourite_locations">Add new locations through the search icon on the main screen and try again</string>
    <string name="day_forecast_temperature">%1$s°</string>
    <string name="section_next_days">Next 7 days</string>
</resources>
