<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed handle in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/unit_header">

        <ListPreference
            app:defaultValue="celcius"
            app:entries="@array/temperature_entries"
            app:entryValues="@array/temperature_values"
            app:key="temperature"
            app:title="@string/temperature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="mps"
            app:entries="@array/wind_entries"
            app:entryValues="@array/wind_values"
            app:key="wind"
            app:title="@string/wind_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="millimeters"
            app:entries="@array/pressure_entries"
            app:entryValues="@array/pressure_values"
            app:key="pressure"
            app:title="@string/pressure"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">

        <SwitchPreferenceCompat
            app:key="update"
            android:defaultValue="true"
            app:title="@string/update_title" />

        <ListPreference
            app:dependency="update"
            app:defaultValue="one"
            app:entries="@array/interval_entries"
            app:entryValues="@array/interval_values"
            app:key="interval"
            app:title="@string/interval_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
