<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/searchCityEditText"
        style="@style/CustomStyle.EditText"
        android:hint="@string/input_enter_city"
        android:inputType="text" />

    <View style="@style/CustomStyle.Divider.Thin.Horizontal" />

    <FrameLayout
        android:id="@+id/hints"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/enterHint"
            style="@style/CustomStyle.Text.Secondary"
            android:layout_gravity="center"
            android:text="@string/search_hint" />

        <LinearLayout
            android:id="@+id/noLocationsHint"
            style="@style/CustomStyle.HintLayout">

            <TextView
                style="@style/CustomStyle.Text.Secondary"
                android:layout_gravity="center"
                android:layout_margin="@dimen/hint_text_margin"
                android:text="@string/hint_icon_sad"
                android:textSize="80sp" />

            <TextView
                style="@style/CustomStyle.Text.Header"
                android:layout_gravity="center"
                android:layout_margin="@dimen/hint_text_margin"
                android:text="@string/hint_title_no_locations" />

            <TextView
                style="@style/CustomStyle.Text.Secondary"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/hint_text_margin"
                android:layout_marginEnd="@dimen/hint_text_margin"
                android:layout_marginBottom="@dimen/hint_text_margin"
                android:text="@string/hint_description_no_locations"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noInternetHint"
            style="@style/CustomStyle.HintLayout">

            <TextView
                style="@style/CustomStyle.Text.Secondary"
                android:layout_gravity="center"
                android:layout_margin="@dimen/hint_text_margin"
                android:text="@string/hint_icon_web"
                android:textSize="80sp" />

            <TextView
                style="@style/CustomStyle.Text.Header"
                android:layout_gravity="center"
                android:layout_margin="@dimen/hint_text_margin"
                android:text="@string/hint_title_no_internet" />

            <TextView
                style="@style/CustomStyle.Text.Secondary"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/hint_text_margin"
                android:layout_marginEnd="@dimen/hint_text_margin"
                android:layout_marginBottom="@dimen/hint_text_margin"
                android:text="@string/hint_description_no_internet"
                android:textAlignment="center" />
        </LinearLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationList"
        style="@style/CustomStyle.Text.Header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_location" />
</LinearLayout>